--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -4,6 +4,14 @@ nelmio_api_doc:
             title: CMH Practical Test
             description: Horses REST API
             version: 1.0.0
+        securityDefinitions:
+            api_key:
+                type: apiKey
+                description: API Access Token
+                name: X-API-Token
+                in: header
+        security:
+            - api_key: []
     areas:
         path_patterns:
             - ^/api(?!/doc)
