removed authentication for apidoc

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        apidoc:
+            pattern: ^/api/doc
+            security: false
         main:
             anonymous: false
             guard:
