minor tweaks + unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 /.env.local.php
 /.env.*.local
 /public/bundles/
-/var/
+/var/*
 /vendor/
 .phpunit
 .phpunit.result.cache
-/phpunit.xml
 /.web-server-pid
 .idea
+!/var/test.db
